--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Winterlands</title>
+</head>
+<body style="background:black;color:white;font-family:serif;">
+  <h1>WINTERLANDS</h1>
+  <p>An alternate truth.</p>
+  <p>Many winters exist.</p>
+  <p>All of them are true.</p>
 
+  <hr>
+
+  <p><em>The Midnight Lotus blooms at midnight.</em></p>
+</body>
+</html>
